cmake_minimum_required(VERSION 3.23)
set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/BuildUtils/CMakeHelpers")
# Generate PDBs in Release builds
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Zi")
set(CMAKE_SHARED_LINKER_FLAGS_RELEASE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE} /DEBUG /OPT:REF /OPT:ICF")

project(EAWebKit)

if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
	message(FATAL_ERROR "In-source builds are not supported. Please choose a different binary directory.")
	return()
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

#option(EAWebKit.ENABLE_LEAN_AND_MEAN "Creates EAWebKit with less options (SVG Disabled)" OFF)

add_subdirectory(EAWebKitSupportPackages/cairo)
add_subdirectory(EAWebKitSupportPackages/coreallocator)
add_subdirectory(EAWebKitSupportPackages/DirtySDK)
#add_subdirectory(EAWebKitSupportPackages/EAAssert)
#add_subdirectory(EAWebKitSupportPackages/EABase)
#add_subdirectory(EAWebKitSupportPackages/EACallstack)
add_subdirectory(EAWebKitSupportPackages/EAIO)
#add_subdirectory(EAWebKitSupportPackages/EASTL)
#add_subdirectory(EAWebKitSupportPackages/EAStdC)
add_subdirectory(EAWebKitSupportPackages/EAText)
#add_subdirectory(EAWebKitSupportPackages/EAThread)
add_subdirectory(EAWebKitSupportPackages/FreeType)
add_subdirectory(EAWebKitSupportPackages/JavaScriptCore)
add_subdirectory(EAWebKitSupportPackages/libjpeg)
add_subdirectory(EAWebKitSupportPackages/libpng)
add_subdirectory(EAWebKitSupportPackages/libxml2)
add_subdirectory(EAWebKitSupportPackages/pixman)
add_subdirectory(EAWebKitSupportPackages/PPMalloc)
add_subdirectory(EAWebKitSupportPackages/SQLite)
add_subdirectory(EAWebKitSupportPackages/WTF)
add_subdirectory(EAWebKitSupportPackages/zlib)

file(GLOB EAWEBKIT_SOURCES
	#"WebCore/*.cpp"
	"WebCore/*.h"
	"WebCore/accessibility/*.cpp"
	"WebCore/accessibility/*.h"
	"WebCore/bindings/generic/*.cpp"
	"WebCore/bindings/generic/*.h"
	#"WebCore/bindings/js/*.cpp"
	"WebCore/bindings/js/*.h"
	#"WebCore/bindings/scripts/test/JS/*.cpp"
	"WebCore/bindings/scripts/test/JS/*.h"
	"WebCore/bridge/*.cpp"
	"WebCore/bridge/*.h"
	#"WebCore/bridge/c/*.cpp"
	"WebCore/bridge/c/*.h"
	"WebCore/bridge/ea/*.cpp"
	"WebCore/bridge/ea/*.h"
	"WebCore/bridge/jsc/*.cpp"
	"WebCore/bridge/jsc/*.h"
	"WebCore/contentextensions/*.cpp"
	"WebCore/contentextensions/*.h"
	#"WebCore/crypto/*.cpp"
	"WebCore/crypto/*.h"
	#"WebCore/crypto/algorithms/*.cpp"
	"WebCore/crypto/algorithms/*.h"
	#"WebCore/crypto/keys/*.cpp"
	"WebCore/crypto/keys/*.h"
	#"WebCore/crypto/parameters/*.cpp"
	"WebCore/crypto/parameters/*.h"
	"WebCore/css/*.cpp"
	"WebCore/css/*.h"
	"WebCore/css/parser/*.cpp"
	"WebCore/css/parser/*.h"
	"WebCore/cssjit/*.cpp"
	"WebCore/cssjit/*.h"
	#"WebCore/DerivedSources/*.cpp"
	"WebCore/DerivedSources/*.h"
	#"WebCore/dom/*.cpp"
	"WebCore/dom/*.h"
	"WebCore/dom/default/*.cpp"
	"WebCore/dom/default/*.h"
	#"WebCore/editing/*.cpp"
	"WebCore/editing/*.h"
	"WebCore/fileapi/*.cpp"
	"WebCore/fileapi/*.h"
	"WebCore/ForwardingHeaders/bindings/*.cpp"
	"WebCore/ForwardingHeaders/bindings/*.h"
	"WebCore/ForwardingHeaders/bytecode/*.cpp"
	"WebCore/ForwardingHeaders/bytecode/*.h"
	"WebCore/ForwardingHeaders/debugger/*.cpp"
	"WebCore/ForwardingHeaders/debugger/*.h"
	"WebCore/ForwardingHeaders/heap/*.cpp"
	"WebCore/ForwardingHeaders/heap/*.h"
	"WebCore/ForwardingHeaders/inspector/*.cpp"
	"WebCore/ForwardingHeaders/inspector/*.h"
	"WebCore/ForwardingHeaders/inspector/agents/*.cpp"
	"WebCore/ForwardingHeaders/inspector/agents/*.h"
	"WebCore/ForwardingHeaders/interpreter/*.cpp"
	"WebCore/ForwardingHeaders/interpreter/*.h"
	"WebCore/ForwardingHeaders/jit/*.cpp"
	"WebCore/ForwardingHeaders/jit/*.h"
	"WebCore/ForwardingHeaders/masm/*.cpp"
	"WebCore/ForwardingHeaders/masm/*.h"
	"WebCore/ForwardingHeaders/parser/*.cpp"
	"WebCore/ForwardingHeaders/parser/*.h"
	"WebCore/ForwardingHeaders/profiler/*.cpp"
	"WebCore/ForwardingHeaders/profiler/*.h"
	"WebCore/ForwardingHeaders/replay/*.cpp"
	"WebCore/ForwardingHeaders/replay/*.h"
	"WebCore/ForwardingHeaders/runtime/*.cpp"
	"WebCore/ForwardingHeaders/runtime/*.h"
	"WebCore/ForwardingHeaders/yarr/*.cpp"
	"WebCore/ForwardingHeaders/yarr/*.h"
	"WebCore/history/*.cpp"
	"WebCore/history/*.h"
	"WebCore/html/*.cpp"
	"WebCore/html/*.h"
	"WebCore/html/canvas/*.cpp"
	"WebCore/html/canvas/*.h"
	"WebCore/html/forms/*.cpp"
	"WebCore/html/forms/*.h"
	"WebCore/html/parser/*.cpp"
	"WebCore/html/parser/*.h"
	"WebCore/html/shadow/*.cpp"
	"WebCore/html/shadow/*.h"
	"WebCore/html/track/*.cpp"
	"WebCore/html/track/*.h"
	#"WebCore/inspector/*.cpp"
	"WebCore/inspector/*.h"
	"WebCore/loader/*.cpp"
	"WebCore/loader/*.h"
	#"WebCore/loader/appcache/*.cpp"
	"WebCore/loader/appcache/*.h"
	"WebCore/loader/archive/*.cpp"
	"WebCore/loader/archive/*.h"
	"WebCore/loader/archive/mhtml/*.cpp"
	"WebCore/loader/archive/mhtml/*.h"
	"WebCore/loader/cache/*.cpp"
	"WebCore/loader/cache/*.h"
	"WebCore/loader/icon/*.cpp"
	"WebCore/loader/icon/*.h"
	#"WebCore/mathml/*.cpp"
	"WebCore/mathml/*.h"
	#"WebCore/Modules/battery/*.cpp"
	"WebCore/Modules/battery/*.h"
	"WebCore/Modules/encryptedmedia/*.cpp"
	"WebCore/Modules/encryptedmedia/*.h"
	#"WebCore/Modules/gamepad/*.cpp"
	"WebCore/Modules/gamepad/*.h"
	#"WebCore/Modules/gamepad/deprecated/*.cpp"
	"WebCore/Modules/gamepad/deprecated/*.h"
	#"WebCore/Modules/geolocation/*.cpp"
	"WebCore/Modules/geolocation/*.h"
	"WebCore/Modules/indexeddb/*.cpp"
	"WebCore/Modules/indexeddb/*.h"
	#"WebCore/Modules/indieui/*.cpp"
	"WebCore/Modules/indieui/*.h"
	"WebCore/Modules/mediacontrols/*.cpp"
	"WebCore/Modules/mediacontrols/*.h"
	"WebCore/Modules/mediasession/*.cpp"
	"WebCore/Modules/mediasession/*.h"
	#"WebCore/Modules/mediasource/*.cpp"
	"WebCore/Modules/mediasource/*.h"
	#"WebCore/Modules/mediastream/*.cpp"
	"WebCore/Modules/mediastream/*.h"
	"WebCore/Modules/navigatorcontentutils/*.cpp"
	"WebCore/Modules/navigatorcontentutils/*.h"
	"WebCore/Modules/notifications/*.cpp"
	"WebCore/Modules/notifications/*.h"
	#"WebCore/Modules/plugins/*.cpp"
	"WebCore/Modules/plugins/*.h"
	"WebCore/Modules/proximity/*.cpp"
	"WebCore/Modules/proximity/*.h"
	"WebCore/Modules/quota/*.cpp"
	"WebCore/Modules/quota/*.h"
	#"WebCore/Modules/speech/*.cpp"
	"WebCore/Modules/speech/*.h"
	"WebCore/Modules/streams/*.cpp"
	"WebCore/Modules/streams/*.h"
	#"WebCore/Modules/vibration/*.cpp"
	"WebCore/Modules/vibration/*.h"
	#"WebCore/Modules/webaudio/*.cpp"
	"WebCore/Modules/webaudio/*.h"
	"WebCore/Modules/webdatabase/*.cpp"
	"WebCore/Modules/webdatabase/*.h"
	"WebCore/Modules/websockets/*.cpp"
	"WebCore/Modules/websockets/*.h"
	"WebCore/page/*.cpp"
	"WebCore/page/*.h"
	"WebCore/page/animation/*.cpp"
	"WebCore/page/animation/*.h"
	"WebCore/page/csp/*.cpp"
	"WebCore/page/csp/*.h"
	"WebCore/page/ea/*.cpp"
	"WebCore/page/ea/*.h"
	"WebCore/page/scrolling/*.cpp"
	"WebCore/page/scrolling/*.h"
	"WebCore/page/scrolling/coordinatedgraphics/*.cpp"
	"WebCore/page/scrolling/coordinatedgraphics/*.h"
	"WebCore/platform/*.cpp"
	"WebCore/platform/*.h"
	"WebCore/platform/animation/*.cpp"
	"WebCore/platform/animation/*.h"
	#"WebCore/platform/audio/*.cpp"
	"WebCore/platform/audio/*.h"
	#"WebCore/platform/audio/gstreamer/*.cpp"
	"WebCore/platform/audio/gstreamer/*.h"
	"WebCore/platform/ea/*.cpp"
	"WebCore/platform/ea/*.h"
	#"WebCore/platform/glib/*.cpp"
	"WebCore/platform/glib/*.h"
	"WebCore/platform/graphics/*.cpp"
	"WebCore/platform/graphics/*.h"
	"WebCore/platform/graphics/cairo/*.cpp"
	"WebCore/platform/graphics/cairo/*.h"
	"WebCore/platform/graphics/cairo/disabled/*.cpp"
	"WebCore/platform/graphics/cairo/disabled/*.h"
	#"WebCore/platform/graphics/cg/*.cpp"
	"WebCore/platform/graphics/cg/*.h"
	"WebCore/platform/graphics/cpu/arm/*.cpp"
	"WebCore/platform/graphics/cpu/arm/*.h"
	#"WebCore/platform/graphics/cpu/arm/filters/*.cpp"
	"WebCore/platform/graphics/cpu/arm/filters/*.h"
	"WebCore/platform/graphics/ea/*.cpp"
	"WebCore/platform/graphics/ea/*.h"
	#"WebCore/platform/graphics/egl/*.cpp"
	"WebCore/platform/graphics/egl/*.h"
	"WebCore/platform/graphics/filters/*.cpp"
	"WebCore/platform/graphics/filters/*.h"
	#"WebCore/platform/graphics/freetype/*.cpp"
	"WebCore/platform/graphics/freetype/*.h"
	#"WebCore/platform/graphics/gpu/*.cpp"
	"WebCore/platform/graphics/gpu/*.h"
	#"WebCore/platform/graphics/gstreamer/*.cpp"
	"WebCore/platform/graphics/gstreamer/*.h"
	#"WebCore/platform/graphics/harfbuzz/*.cpp"
	"WebCore/platform/graphics/harfbuzz/*.h"
	#"WebCore/platform/graphics/opengl/*.cpp"
	"WebCore/platform/graphics/opengl/*.h"
	"WebCore/platform/graphics/opentype/*.cpp"
	"WebCore/platform/graphics/opentype/*.h"
	#"WebCore/platform/graphics/surfaces/*.cpp"
	"WebCore/platform/graphics/surfaces/*.h"
	#"WebCore/platform/graphics/texmap/*.cpp"
	"WebCore/platform/graphics/texmap/*.h"
	#"WebCore/platform/graphics/texmap/coordinated/*.cpp"
	"WebCore/platform/graphics/texmap/coordinated/*.h"
	"WebCore/platform/graphics/transforms/*.cpp"
	"WebCore/platform/graphics/transforms/*.h"
	#"WebCore/platform/graphics/wayland/*.cpp"
	"WebCore/platform/graphics/wayland/*.h"
	#"WebCore/platform/graphics/x11/*.cpp"
	"WebCore/platform/graphics/x11/*.h"
	"WebCore/platform/image-decoders/*.cpp"
	"WebCore/platform/image-decoders/*.h"
	"WebCore/platform/image-decoders/bmp/*.cpp"
	"WebCore/platform/image-decoders/bmp/*.h"
	"WebCore/platform/image-decoders/cairo/*.cpp"
	"WebCore/platform/image-decoders/cairo/*.h"
	"WebCore/platform/image-decoders/dds/*.cpp"
	"WebCore/platform/image-decoders/dds/*.h"
	"WebCore/platform/image-decoders/gif/*.cpp"
	"WebCore/platform/image-decoders/gif/*.h"
	"WebCore/platform/image-decoders/ico/*.cpp"
	"WebCore/platform/image-decoders/ico/*.h"
	"WebCore/platform/image-decoders/jpeg/*.cpp"
	"WebCore/platform/image-decoders/jpeg/*.h"
	"WebCore/platform/image-decoders/png/*.cpp"
	"WebCore/platform/image-decoders/png/*.h"
	"WebCore/platform/image-decoders/webp/*.cpp"
	"WebCore/platform/image-decoders/webp/*.h"
	#"WebCore/platform/image-encoders/*.cpp"
	"WebCore/platform/image-encoders/*.h"
	#"WebCore/platform/mediasession/*.cpp"
	"WebCore/platform/mediasession/*.h"
	#"WebCore/platform/mediastream/*.cpp"
	"WebCore/platform/mediastream/*.h"
	#"WebCore/platform/mediastream/openwebrtc/*.cpp"
	"WebCore/platform/mediastream/openwebrtc/*.h"
	#"WebCore/platform/mock/*.cpp"
	"WebCore/platform/mock/*.h"
	#"WebCore/platform/mock/mediasource/*.cpp"
	"WebCore/platform/mock/mediasource/*.h"
	"WebCore/platform/network/*.cpp"
	"WebCore/platform/network/*.h"
	#"WebCore/platform/network/curl/*.cpp"
	"WebCore/platform/network/curl/*.h"
	"WebCore/platform/network/ea/*.cpp"
	"WebCore/platform/network/ea/*.h"
	"WebCore/platform/spi/cf/*.cpp"
	"WebCore/platform/spi/cf/*.h"
	"WebCore/platform/spi/cg/*.cpp"
	"WebCore/platform/spi/cg/*.h"
	"WebCore/platform/sql/*.cpp"
	"WebCore/platform/sql/*.h"
	"WebCore/platform/text/*.cpp"
	"WebCore/platform/text/*.h"
	"WebCore/platform/text/ea/*.cpp"
	"WebCore/platform/text/ea/*.h"
	#"WebCore/platform/text/enchant/*.cpp"
	"WebCore/platform/text/enchant/*.h"
	#"WebCore/platform/text/icu/*.cpp"
	"WebCore/platform/text/icu/*.h"
	"WebCore/plugins/*.cpp"
	"WebCore/plugins/*.h"
	#"WebCore/rendering/*.cpp"
	"WebCore/rendering/*.h"
	"WebCore/rendering/line/*.cpp"
	"WebCore/rendering/line/*.h"
	"WebCore/rendering/mathml/*.cpp"
	"WebCore/rendering/mathml/*.h"
	"WebCore/rendering/shapes/*.cpp"
	"WebCore/rendering/shapes/*.h"
	#"WebCore/rendering/style/*.cpp"
	"WebCore/rendering/style/*.h"
	#"WebCore/rendering/svg/*.cpp"
	"WebCore/rendering/svg/*.h"
	#"WebCore/replay/*.cpp"
	"WebCore/replay/*.h"
	"WebCore/storage/*.cpp"
	"WebCore/storage/*.h"
	"WebCore/style/*.cpp"
	"WebCore/style/*.h"
	#"WebCore/svg/*.cpp"
	"WebCore/svg/*.h"
	"WebCore/svg/animation/*.cpp"
	"WebCore/svg/animation/*.h"
	"WebCore/svg/graphics/*.cpp"
	"WebCore/svg/graphics/*.h"
	"WebCore/svg/graphics/filters/*.cpp"
	"WebCore/svg/graphics/filters/*.h"
	"WebCore/svg/properties/*.cpp"
	"WebCore/svg/properties/*.h"
	#"WebCore/testing/*.cpp"
	"WebCore/testing/*.h"
	#"WebCore/testing/js/*.cpp"
	"WebCore/testing/js/*.h"
	"WebCore/workers/*.cpp"
	"WebCore/workers/*.h"
	"WebCore/xml/*.cpp"
	"WebCore/xml/*.h"
	#"WebCore/xml/parser/*.cpp"
	"WebCore/xml/parser/*.h"
	"WebKit/ea/Api/EAWebKit/include/EAWebKit/*.cpp"
	"WebKit/ea/Api/EAWebKit/include/EAWebKit/*.h"
	"WebKit/ea/Api/EAWebKit/source/*.cpp"
	"WebKit/ea/Api/EAWebKit/source/*.h"
	"WebKit/ea/Api/EAWebKit/source/internal/include/*.cpp"
	"WebKit/ea/Api/EAWebKit/source/internal/include/*.h"
	"WebKit/ea/Api/EAWebKit/source/internal/include/InputBinding/*.cpp"
	"WebKit/ea/Api/EAWebKit/source/internal/include/InputBinding/*.h"
	"WebKit/ea/Api/EAWebKit/source/internal/source/*.cpp"
	"WebKit/ea/Api/EAWebKit/source/internal/source/*.h"
	"WebKit/ea/Api/EAWebKit/source/win32/*.cpp"
	"WebKit/ea/Api/EAWebKit/source/win32/*.h"
	"WebKit/ea/Api/private/*.cpp"
	"WebKit/ea/Api/private/*.h"
	"WebKit/ea/WebCoreSupport/*.cpp"
	"WebKit/ea/WebCoreSupport/*.h"
	"WebKit/ea/WebCoreSupport/InspectorServer/*.cpp"
	"WebKit/ea/WebCoreSupport/InspectorServer/*.h"
	"WebKit/ea/WebCoreSupport/InspectorServer/ea/*.cpp"
	"WebKit/ea/WebCoreSupport/InspectorServer/ea/*.h"
	"WebKit/storage/*.cpp"
	"WebKit/storage/*.h"
  )


list(APPEND EAWEBKIT_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/bindings/js/JSBindingsAllInOne.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/dom/default/PlatformMessagePortChannel.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/dom/DOMAllInOne.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/dom/QualifiedName.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/editing/EditingAllInOne.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/inspector/InspectorAllInOne.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/loader/appcache/ApplicationCacheAllInOne.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/loader/appcache/DOMApplicationCache.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/loader/appcache/ManifestParser.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/audio/AudioHardwareListener.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/audio/AudioSession.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/audio/PlatformMediaSession.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/audio/PlatformMediaSessionManager.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/graphics/texmap/BitmapTexture.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/graphics/texmap/BitmapTexturePool.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/graphics/texmap/GraphicsLayerTextureMapper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/graphics/texmap/TextureMapper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/graphics/texmap/TextureMapperAnimation.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/graphics/texmap/TextureMapperBackingStore.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/graphics/texmap/TextureMapperFPSCounter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/graphics/texmap/TextureMapperSurfaceBackingStore.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/graphics/texmap/TextureMapperTile.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/graphics/texmap/TextureMapperTiledBackingStore.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/mock/DeviceOrientationClientMock.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/mock/GeolocationClientMock.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/mock/ScrollbarThemeMock.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/rendering/RenderingAllInOne.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/rendering/style/StyleAllInOne.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/rendering/svg/RenderSVGAllInOne.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/replay/UserInputBridge.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/svg/SVGAllInOne.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/svg/SVGToOTFFontConversion.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/xml/parser/XMLDocumentParserLibxml2.cpp

	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/ColorData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/CSSPropertyNames.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/CSSValueKeywords.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/ExceptionCodeDescription.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/HTMLNames.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/HTTPHeaderNames.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/JSNotificationPermissionCallback.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/JSSVGElementWrapperFactory.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/MathMLElementFactory.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/MathMLNames.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/SelectorPseudoClassAndCompatibilityElementMap.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/SelectorPseudoElementTypeMap.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/StyleBuilder.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/StylePropertyShorthandFunctions.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/SVGElementFactory.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/SVGNames.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/WebKitFontFamilyNames.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/XLinkNames.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/XMLNames.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/DerivedSources/XMLNSNames.cpp
	)


list(REMOVE_ITEM EAWEBKIT_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/bridge/testbindings.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/accessibility/AccessibilityAllInOne.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/css/CSSAllInOne.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/CanvasProxy.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/ANGLEInstancedArrays.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/EXTBlendMinMax.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/EXTFragDepth.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/EXTShaderTextureLOD.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/EXTTextureFilterAnisotropic.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/EXTsRGB.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/OESElementIndexUint.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/OESStandardDerivatives.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/OESTextureFloat.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/OESTextureFloatLinear.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/OESTextureHalfFloat.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/OESTextureHalfFloatLinear.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/OESVertexArrayObject.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGL2RenderingContext.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLAny.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLBuffer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLCompressedTextureATC.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLCompressedTexturePVRTC.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLCompressedTextureS3TC.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLContextEvent.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLContextGroup.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLContextObject.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLDebugRendererInfo.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLDebugShaders.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLDepthTexture.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLDrawBuffers.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLExtension.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLFramebuffer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLLoseContext.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLObject.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLProgram.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLQuery.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLRenderbuffer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLRenderingContext.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLRenderingContextBase.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLSampler.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLShader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLShaderPrecisionFormat.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLSharedObject.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLSync.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLTexture.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLTransformFeedback.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLUniformLocation.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLVertexArrayObject.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLVertexArrayObjectBase.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/canvas/WebGLVertexArrayObjectOES.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/HTMLElementsAllInOne.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/HTMLSelectElementWin.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/shadow/ImageControlsRootElement.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/shadow/MediaControlsApple.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/html/shadow/YouTubeEmbedShadowElement.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/Modules/quota/WorkerNavigatorStorageQuota.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/page/CaptionUserPreferencesMediaAF.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/page/DOMSecurityPolicy.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/page/PageDebuggable.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/page/PerformanceUserTiming.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/page/PointerLockController.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/page/scrolling/AsyncScrollingCoordinator.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/page/scrolling/AxisScrollSnapOffsets.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/page/scrolling/ScrollingStateFrameScrollingNode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/page/scrolling/ScrollingStateOverflowScrollingNode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/page/scrolling/ScrollingTreeFrameScrollingNode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/page/scrolling/ScrollingTreeOverflowScrollingNode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/page/scrolling/ThreadedScrollingTree.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/page/TextIndicator.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/page/UserMessageHandler.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/page/UserMessageHandlerDescriptor.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/page/UserMessageHandlersNamespace.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/page/ViewportConfiguration.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/page/WebKitNamespace.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/ContextMenuItemNone.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/ContextMenuNone.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/GamepadProvider.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/graphics/cairo/FontCairo.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/graphics/cairo/FontCairoHarfbuzzNG.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/graphics/DisplayRefreshMonitor.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/graphics/DisplayRefreshMonitorClient.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/graphics/DisplayRefreshMonitorManager.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/graphics/opentype/OpenTypeUtilities.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/PlatformSpeechSynthesisUtterance.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/PlatformSpeechSynthesisVoice.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/PlatformSpeechSynthesizer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/text/LocaleICU.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/text/LocaleToScriptMappingICU.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/text/TextBoundaries.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/text/TextBreakIterator.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/text/TextCodec.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/text/TextCodecICU.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/text/TextCodecLatin1.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/text/TextCodecUserDefined.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/text/TextCodecUTF16.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/text/TextCodecUTF8.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/text/TextEncoding.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/text/TextEncodingDetectorICU.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/text/TextEncodingDetectorNone.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/text/TextEncodingRegistry.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/text/TextStream.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/WebCore/platform/Theme.cpp
	)

include(GenerateProductVersion)

GenerateProductVersion(ProductVersionFiles
    NAME EAWebKit
    VERSION 16.4.2.2.0
    COMPANY_NAME EAWebKit-DC
    )

# required for proper DLL export
set(DEF_FILE BuildUtils/Def/EAWebKit_Microsoft.def)

add_library(EAWebKit SHARED
  ${EAWEBKIT_SOURCES}
  $<$<PLATFORM_ID:Windows>:${EAWEBKIT_SOURCES_WIN}>
  $<$<PLATFORM_ID:Windows>:${ProductVersionFiles}>
  ${DEF_FILE}
  )

set_source_files_properties(${DEF_FILE} PROPERTIES HEADER_FILE_ONLY TRUE)

# Output filename
set_target_properties(EAWebKit PROPERTIES OUTPUT_NAME "EAWebKit$<$<CONFIG:Debug>:d>")

target_include_directories(EAWebKit PRIVATE
	"WebCore/bridge/ea"
	"WebCore/page/csp"
	"WebCore/page/ea"
	"WebCore/platform/graphics/ea"
	"WebCore/platform/network/ea"
	"WebCore/platform/ea"
	"WebKit/ea/Api/EAWebKit/include"
	"WebKit/ea/Api/EAWebKit/source"
	"WebKit/ea/Api/private"
	"WebKit/ea/WebCoreSupport"
	"WebKit/ea/WebCoreSupport/InspectorServer"
	"WebKit/storage"
	"WebCore"
	"WebCore/animation"
	"WebCore/crypto"
	"WebCore/crypto/keys"
    "WebCore/Modules/airplay"
    "WebCore/Modules/applepay"
	"WebCore/Modules/encryptedmedia"
	"WebCore/Modules/encryptedmedia/legacy"
	"WebCore/Modules/fetch"
	"WebCore/Modules/gamepad"
    "WebCore/Modules/geolocation"
    "WebCore/Modules/indexeddb"
    "WebCore/Modules/indexeddb/client"
    "WebCore/Modules/indexeddb/server"
    "WebCore/Modules/indexeddb/shared"
	"WebCore/Modules/mediacontrols"
	"WebCore/Modules/mediasession"
	"WebCore/Modules/mediasource"
	"WebCore/Modules/mediastream"
	"WebCore/Modules/navigatorcontentutils"
	"WebCore/Modules/notifications"
	"WebCore/Modules/plugins"
	"WebCore/Modules/proximity"
	"WebCore/Modules/quota"
	"WebCore/Modules/speech"
	"WebCore/Modules/streams"
	"WebCore/Modules/webdatabase"
	"WebCore/Modules/webdriver"
	"WebCore/Modules/websockets"
	"WebCore/accessibility"
	"WebCore/bindings"
	"WebCore/bindings/generic"
	"WebCore/bindings/js"
	"WebCore/bridge"
	"WebCore/bridge/jsc"
	"WebCore/contentextensions"
	"WebCore/css"
	"WebCore/css/parser"
	"WebCore/cssjit"
	"WebCore/displaylist"
	"WebCore/dom"
	"WebCore/dom/default"
	"WebCore/domjit"
	"WebCore/editing"
	"WebCore/fileapi"
	"WebCore/history"
	"WebCore/html"
	"WebCore/html/canvas"
	"WebCore/html/forms"
	"WebCore/html/parser"
	"WebCore/html/shadow"
	"WebCore/html/track"
	"WebCore/inspector"
	"WebCore/loader"
	"WebCore/loader/appcache"
	"WebCore/loader/archive"
	"WebCore/loader/archive/mhtml"
	"WebCore/loader/cache"
	"WebCore/loader/icon"
	"WebCore/mathml"
	"WebCore/page"
	"WebCore/page/animation"
	"WebCore/page/scrolling"
	"WebCore/page/scrolling/coordinatedgraphics"
	"WebCore/pal"
	"WebCore/platform"
	"WebCore/platform/animation"
	"WebCore/platform/audio"
	"WebCore/platform/graphics"
	"WebCore/platform/graphics/cpu/arm/filters"
	"WebCore/platform/graphics/cairo"
	"WebCore/platform/graphics/displaylists"
	"WebCore/platform/graphics/filters"
	"WebCore/platform/graphics/gpu"
	"WebCore/platform/graphics/opentype"
	"WebCore/platform/graphics/texmap"
	"WebCore/platform/graphics/transforms"
	"WebCore/platform/image-decoders"
	"WebCore/platform/image-decoders/gif"
	"WebCore/platform/image-decoders/bmp"
	"WebCore/platform/image-decoders/ico"
	"WebCore/platform/image-decoders/cairo"
	"WebCore/platform/image-decoders/jpeg"
	"WebCore/platform/image-decoders/png"
	"WebCore/platform/image-decoders/webp"
	"WebCore/platform/image-decoders/dds"
    "WebCore/platform/mediastream"
    "WebCore/platform/mediastream/libwebrtc"
	"WebCore/platform/mock"
	"WebCore/platform/network"
	"WebCore/platform/network/curl"
	"WebCore/platform/sql"
	"WebCore/platform/text"
	"WebCore/plugins"
	"WebCore/rendering"
	"WebCore/rendering/line"
	"WebCore/rendering/mathml"
	"WebCore/rendering/shapes"
	"WebCore/rendering/style"
	"WebCore/rendering/svg"
	"WebCore/replay"
	"WebCore/storage"
	"WebCore/style"
	"WebCore/svg"
	"WebCore/svg/animation"
	"WebCore/svg/graphics"
	"WebCore/svg/graphics/displaylists"
	"WebCore/svg/graphics/filters"
	"WebCore/svg/properties"
	"WebCore/workers"
	"WebCore/xml"
	"WebCore/xml/parser"
	"WebCore/DerivedSources"
	)

target_link_libraries(EAWebKit PUBLIC JavaScriptCore EAText cairo SQLite libjpeg libxml2 DirtySDK)

set(EAWEBKIT_TEXT_GLYPH_CACHE_SIZE "512" CACHE STRING "When using large fonts, the glyph cache may need to be increased")
set(EAWEBKIT_TEXT_GLYPH_CACHE_TEXTURE_COUNT "8" CACHE STRING "When using large fonts, the glyph cache may need to be increased")

option(JAVASCRIPTCORE_DISABLE_JIT "If desired, disable JIT on supported platforms." OFF)
option(JAVASCRIPTCORE_FORCE_DISABLE_JIT "Forcing fallback into non jit version for PC builds only." OFF)

if(JAVASCRIPTCORE_DISABLE_JIT)
    target_compile_definitions(JavaScriptCore PRIVATE ENABLE_JIT=0)
endif()

if(JAVASCRIPTCORE_FORCE_DISABLE_JIT)
    target_compile_definitions(JavaScriptCore PRIVATE FORCE_NON_JIT=1)
endif()


target_compile_definitions(EAWebKit PRIVATE
	BUILDING_EA__
	BUILDING_EA__=1
	BUILDING_EAWEBKIT_DLL=1
	BUILDING_WebCore
	BUILDING_WebKit
	cairo_public=
	EASTL_NOMINMAX=0
	EATEXT_USE_FREETYPE
	EAWEBKIT_PLATFORM_HEADER=<windows.h>
	ENABLE_DIRTYSDK_IN_DLL=1
	ENABLE_EATEXT_IN_DLL=1
	JS_NO_EXPORT
	LIBXML_STATIC
	LIBXML_STATIC_FOR_DLL
	NOMINMAX=1
	PNG_IMPEXP=
	SQLITE_CORE
	SQLITE_OMIT_COMPLETE
	SQLITE_OMIT_LOAD_EXTENSION
	SQLITE_OS_OTHER
	UNICODE
	USE_SYSTEM_MALLOC=1
	UTF_USE_EAASSERT=1
	EAWEBKIT_TEXT_GLYPH_CACHE_SIZE=${EAWEBKIT_TEXT_GLYPH_CACHE_SIZE}
	EAWEBKIT_TEXT_GLYPH_CACHE_TEXTURE_COUNT=${EAWEBKIT_TEXT_GLYPH_CACHE_TEXTURE_COUNT}
	$<$<CONFIG:RELEASE>:NDEBUG>
	$<$<CONFIG:DEBUG>:EA_DEBUG>
	$<$<CONFIG:RelWithDebInfo>:EA_DEBUG>
  )

if(MSVC)
  target_compile_definitions(EAWebKit PRIVATE
    _CRT_SECURE_NO_WARNINGS
    )
endif()

if (MSVC)
  target_compile_options(EAWebKit PRIVATE
      /MP
      /W0
      $<$<CONFIG:RELEASE>:-Zo -d2SSAOptimizer->
      /bigobj /vmg -bigobj /FS /Zf /fp:except-
      /wd4244 /wd4800 /wd4530 /wd4996 /wd4100 /wd4127 /wd4251 /wd4275 /wd4324 /wd4350 /wd4464 /wd4482 /wd4577 /wd4711 /wd4746 /wd4986 /wd4987 /wd4819
      )
  target_link_options(EAWebKit PRIVATE 
        /DEF:${CMAKE_CURRENT_SOURCE_DIR}/${DEF_FILE}
    )
endif()